added Eric, Jonas & HODL

--- a/index.html
+++ b/index.html
@@ -238,7 +238,13 @@
             <div class="row">
                 <div class="text-center">
                   <ul id="confirmed-speakers">
-
+                    <a href="https://twitter.com/AaronvanW" target="_blank" style="text-decoration:none !important;">
+                          <li>
+                              <img src="img/speakers/aaronVanWirdum.jpg" width="180" height="180" alt="Aaron van Wirdum"/>
+                              <span class="name">Aaron van Wirdum</span>
+                              <span class="role">Bitcoin Magazine</span>
+                          </li>
+                      </a>
                     <a href="https://twitter.com/nopara73" target="_blank" style="text-decoration:none !important;">
                         <li>
                             <img src="img/speakers/adamFiscor.jpg" width="180" height="180" alt="Adam Fiscor"/>
@@ -246,6 +252,13 @@
                             <span class="role">TumbleBit</span>
                         </li>
                     </a>
+                    <a href="https://twitter.com/waxwing__" target="_blank" style="text-decoration:none !important;">
+                          <li>
+                              <img src="img/speakers/adamGibson.jpg" width="180" height="180" alt="Adam Gibson "/>
+                              <span class="name">Adam Gibson</span>
+                              <span class="role">github.com/AdamISZ</span>
+                          </li>
+                      </a>
                       <a href="https://twitter.com/kanzure" target="_blank" style="text-decoration:none !important;">
                           <li>
                               <img src="img/speakers/bryanBishop.jpg" width="180" height="180" alt="Bryan Bishop"/>
@@ -253,12 +266,12 @@
                               <span class="role">LedgerX</span>
                           </li>
                       </a>
-                      <a href="https://twitter.com/truthcoin" target="_blank" style="text-decoration:none !important;">
-                          <li>
-                              <img src="img/speakers/paulSztorc.jpg" width="180" height="180" alt="Paul Sztorc"/>
-                              <span class="name">Paul Sztorc</span>
-                              <span class="role">Drivechain</span>
-                          </li>
+                      <a href="https://www.linkedin.com/in/evoskuil" target="_blank" style="text-decoration:none !important;">
+                        <li>
+                            <img src="img/speakers/ericVoskuil.jpg" width="180" height="180" alt="Eric Voskuil "/>
+                            <span class="name">Eric Voskuil</span>
+                            <span class="role">Bitware</span>
+                        </li>
                       </a>
                       <a href="https://twitter.com/giacomozucco" target="_blank" style="text-decoration:none !important;">
                           <li>
@@ -266,6 +279,28 @@
                               <span class="name">Giacomo Zucco</span>
                               <span class="role">BHB Network</span>
 
+                          </li>
+                      </a>
+                      <a href="https://twitter.com/lopp" target="_blank" style="text-decoration:none !important;">
+                          <li>
+                              <img src="img/speakers/jamesonLopp.jpg" width="180" height="180" alt="Jameson Lopp "/>
+                              <span class="name">Jameson Lopp</span>
+                              <span class="role">keys.casa</span>
+
+                          </li>
+                      </a>
+                      <a href="https://twitter.com/_jonasschnelli_" target="_blank" style="text-decoration:none !important;">
+                        <li>
+                            <img src="img/speakers/jonasSchnelli.jpg" width="180" height="180" alt="Jonas Schnelli"/>
+                            <span class="name">Jonas Schnelli</span>
+                            <span class="role">digitalbitbox.com</span>
+                        </li>
+                    </a>
+                      <a href="https://twitter.com/KLoaec" target="_blank" style="text-decoration:none !important;">
+                          <li>
+                              <img src="img/speakers/kevinLoaec.jpg" width="180" height="180" alt="Kevin Loaec "/>
+                              <span class="name">Kevin Loaec</span>
+                              <span class="role">Chainsmiths</span>
                           </li>
                       </a>
                       <a href="https://twitter.com/BTChip" target="_blank" style="text-decoration:none !important;">
@@ -282,35 +317,18 @@
                               <span class="role">Metaco SA</span>
                           </li>
                       </a>
-                      <a href="https://twitter.com/AaronvanW" target="_blank" style="text-decoration:none !important;">
+                      <a href="https://twitter.com/truthcoin" target="_blank" style="text-decoration:none !important;">
                           <li>
-                              <img src="img/speakers/aaronVanWirdum.jpg" width="180" height="180" alt="Aaron van Wirdum"/>
-                              <span class="name">Aaron van Wirdum</span>
-                              <span class="role">Bitcoin Magazine</span>
+                              <img src="img/speakers/paulSztorc.jpg" width="180" height="180" alt="Paul Sztorc"/>
+                              <span class="name">Paul Sztorc</span>
+                              <span class="role">Drivechain</span>
                           </li>
                       </a>
-
-                      <a href="https://twitter.com/KLoaec" target="_blank" style="text-decoration:none !important;">
+                      <a href="https://twitter.com/patestevao" target="_blank" style="text-decoration:none !important;">
                           <li>
-                              <img src="img/speakers/kevinLoaec.jpg" width="180" height="180" alt="Kevin Loaec "/>
-                              <span class="name">Kevin Loaec</span>
-                              <span class="role">Chainsmiths</span>
-                          </li>
-                      </a>
-                      <a href="https://twitter.com/lopp" target="_blank" style="text-decoration:none !important;">
-                          <li>
-                              <img src="img/speakers/jamesonLopp.jpg" width="180" height="180" alt="Jameson Lopp "/>
-                              <span class="name">Jameson Lopp</span>
-                              <span class="role">BitGo</span>
-
-                          </li>
-                      </a>
-                      <a href="https://twitter.com/ziggamon" target="_blank" style="text-decoration:none !important;">
-                          <li>
-                              <img src="img/speakers/sergejKotliar.jpg" width="180" height="180" alt="Sergej Kotliar "/>
-                              <span class="name">Sergej Kotliar</span>
-                              <span class="role">Bitrefill</span>
-
+                              <img src="img/speakers/patriciaEstevao.jpg" width="180" height="180" alt="Patrícia Estevão "/>
+                              <span class="name">Patrícia Estevão</span>
+                              <span class="role">UX Designer, Consultant</span>
                           </li>
                       </a>
                       <a href="https://twitter.com/rperezmarco" target="_blank" style="text-decoration:none !important;">
@@ -320,18 +338,12 @@
                               <span class="role">CNRS</span>
                           </li>
                       </a>
-                      <a href="https://twitter.com/waxwing__" target="_blank" style="text-decoration:none !important;">
+                      <a href="https://twitter.com/ziggamon" target="_blank" style="text-decoration:none !important;">
                           <li>
-                              <img src="img/speakers/adamGibson.jpg" width="180" height="180" alt="Adam Gibson "/>
-                              <span class="name">Adam Gibson</span>
-                              <span class="role"></span>
-                          </li>
-                      </a>
-                      <a href="https://twitter.com/patestevao" target="_blank" style="text-decoration:none !important;">
-                          <li>
-                              <img src="img/speakers/patriciaEstevao.jpg" width="180" height="180" alt="Patrícia Estevão "/>
-                              <span class="name">Patrícia Estevão</span>
-                              <span class="role">UX Designer, Consultant</span>
+                              <img src="img/speakers/sergejKotliar.jpg" width="180" height="180" alt="Sergej Kotliar "/>
+                              <span class="name">Sergej Kotliar</span>
+                              <span class="role">Bitrefill</span>
+
                           </li>
                       </a>
                       <!--
@@ -396,13 +408,6 @@
                             <img src="img/speakers/ericLombrozo.jpg" width="180" height="180" alt="Eric Lombrozo"/>
                             <span class="name">Eric Lombrozo</span>
                             <span class="role">Ciphrex</span>
-                        </li>
-                    </a>
-                    <a href="https://www.linkedin.com/in/evoskuil" target="_blank" style="text-decoration:none !important;">
-                        <li>
-                            <img src="img/speakers/ericVoskuil.jpg" width="180" height="180" alt="Eric Voskuil "/>
-                            <span class="name">Eric Voskuil</span>
-                            <span class="role">Bitware</span>
                         </li>
                     </a>
                     <a href="https://www.linkedin.com/in/fabrice-drouin-95ab8012" target="_blank" style="text-decoration:none !important;">
@@ -626,9 +631,14 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-4 col-md-2 offset-md-4">
+                                <div class="col-4 col-md-2 offset-md-3">
                                     <a class="sponsor" href="https://www.f2pool.com/" target="_blank">
                                         <img class="img-fluid" src="img/sponsors/silver/f2pool.png" alt="F2pool">
+                                    </a>
+                                </div>
+                                <div class="col-4 col-md-2">
+                                    <a class="sponsor" href="https://www.hodl.capital/" target="_blank">
+                                        <img class="img-fluid" src="img/sponsors/silver/HODL.png" alt="HODL.capital">
                                     </a>
                                 </div>
                                 <div class="col-4 col-md-2">
