added CoC + discount code + cleanup

--- a/index.html
+++ b/index.html
@@ -372,8 +372,6 @@
                         <br>
                         <strong>contact@building-on-bitcoin.com</strong>
                     </p>
-                    <p class="text-black">Last year, Breaking Bitcoin was a sold-out event. Be quick!</p>
-
                     <!-- Don't hurt me, it's a caching issue, want to fix as quickly-->
                     <style type="text/css">
                     .tito-tickets-button {
@@ -390,6 +388,13 @@
                     </style>
                     <tito-button event="chainsmiths-pt/building-on-bitcoin-2018">Buy Tickets Now</tito-button>
                     <br /><br />
+                    <p class="text-black">
+                        Please have a look to our 
+                        <a class="nounderline" href="docs/Code_of_Conduct.pdf" type="application/pdf" target="_blank">
+                            Code of Conduct
+                        </a>
+                    </p>
+                    
 
                 </div>
             </div>
@@ -457,7 +462,7 @@
                                     </a>
                                 </div>
                                 <div class="col-4 col-md-2">
-                                    <a class="sponsor" href="sponsors/Bobsponsorship.pdf" type="application/pdf" target="_blank">
+                                    <a class="sponsor" href="docs/Bobsponsorship.pdf" type="application/pdf" target="_blank">
                                         <img class="img-fluid" src="img/sponsors/besponsor.png" alt="Sponsorship silver">
                                     </a>
                                 </div>
@@ -507,6 +512,30 @@
                                 <img class="img-fluid" src="img/sponsors/digitalservice1.png" alt="Digital Service">
                             </a>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <br><br>
+            <div class="row">
+                <div class="container">
+                    <div class="text-center">
+                        <h2 class="section-heading text-black">Official Airline</h2>
+                        <hr class="invert">
+                        <div class="col-md-6 offset-md-3">
+                            <a class="sponsor" href="https://www.flytap.com" target="_blank">
+                                <img class="img-fluid" src="img/sponsors/TAP_vertical_POS.png" alt="TAP Air Portugal">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="container">
+                    <div class="col-lg-4 offset-lg-4 col-xs-8 offset-xs-2 text-center">
+                        <a class="nounderline" href="docs/TAP_discount_code.pdf" type="application/pdf" target="_blank">
+                            <h5 class="code color-1">Discount Code</h5>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -561,7 +590,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 offset-lg-4 col-xs-8 offset-xs-2 text-center">
-                    <a class="nounderline" href="sponsors/Bobsponsorship.pdf" type="application/pdf">
+                    <a class="nounderline" href="docs/Bobsponsorship.pdf" type="application/pdf" target="_blank">
                         <h5 class="code color-1">
                             Sponsoring
                         </h5>
