--- a/index.html
+++ b/index.html
@@ -461,9 +461,38 @@
                                         <img class="img-fluid" src="img/sponsors/silver/HODL.png" alt="HODL.capital">
                                     </a>
                                 </div>
+                               <!-- <div class="col-4 col-md-2">
+                                    <a class="sponsor" href="https://www.bcademy.it/" target="_blank">
+                                        <img class="img-fluid" src="img/sponsors/silver/Bcademy.png" alt="BCademy">
+                                    </a>
+                                </div>
+                                <div class="col-4 col-md-2">
+                                    <a class="sponsor" href="#" target="_blank">
+                                        <img class="img-fluid" src="img/sponsors/silver/satoshiDesign.png" alt="satoshiDesign">
+                                    </a>
+                                </div>-->
                                 <div class="col-4 col-md-2">
                                     <a class="sponsor" href="docs/Bobsponsorship.pdf" type="application/pdf" target="_blank">
-                                        <img class="img-fluid" src="img/sponsors/besponsor.png" alt="Sponsorship silver">
+                                        <img class="img-fluid" src="img/sponsors/besponsor.png" alt="Sponsorship Proposal">
+                                    </a>
+                                </div>
+                            </div>
+                            <br><br>
+                            <div class="row">
+                                <div class="col-12">
+                                    <h3 class="section-heading text-black">Coal</h3>
+                                    <hr class="invert">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-4 col-md-2 offset-md-4">
+                                    <a class="sponsor" href="https://comproeuro.it/" target="_blank">
+                                        <img class="img-fluid" src="img/sponsors/coal/comproEuro.png" alt="Compro Euro">
+                                    </a>
+                                </div>
+                                <div class="col-4 col-md-2">
+                                    <a class="sponsor" href="https://inbitcoin.it/" target="_blank">
+                                        <img class="img-fluid" src="img/sponsors/coal/inBitcoin.png" alt="inBitcoin">
                                     </a>
                                 </div>
                             </div>
