--- a/index.html
+++ b/index.html
@@ -367,10 +367,7 @@
                         <b>€200</b> Individual or startup
                         <br><br>
                         <b>€400</b> Regular business / corporate / Late birds
-                        <br><br>
-                        If you want to pay <strong>in bitcoins</strong>, or if you want to benefit from the Student Discount, contact us at:
-                        <br>
-                        <strong>contact@building-on-bitcoin.com</strong>
+                        
                     </p>
                     <!-- Don't hurt me, it's a caching issue, want to fix as quickly-->
                     <style type="text/css">
@@ -389,6 +386,17 @@
                     <tito-button event="chainsmiths-pt/building-on-bitcoin-2018">Buy Tickets Now</tito-button>
                     <br /><br />
                     <p class="text-black">
+                        If you want to buy your ticket using Bitcoin:
+                        <br>
+                        <a class="btn btn-primary btn-xl mt-4 paddingten" href="https://www.bitrefill.com/building-on-bitcoin/" target="_blank">
+                            <img class="img-fluid" src="img/sponsors/bitrefill.png" alt="Bitrefill">
+                        </a>
+                    </p>
+                    <p class="text-black">
+                        If you want to benefit from the Student Discount, contact us at:
+                        <br>
+                        <strong>contact@building-on-bitcoin.com</strong>
+                        <br><br>
                         Please have a look to our 
                         <a class="nounderline" href="docs/Code_of_Conduct.pdf" type="application/pdf" target="_blank">
                             Code of Conduct
