--- a/index.html
+++ b/index.html
@@ -289,6 +289,21 @@
 
                           </li>
                       </a>
+                      <a href="https://twitter.com/timoncc" target="_blank" style="text-decoration:none !important;">
+                          <li>
+                              <img src="img/speakers/jeorgeTimon.jpg" width="180" height="180" alt="Jorge Timón"/>
+                              <span class="name">Jorge Timón</span>
+                              <span class="role">blockstream.com/</span>
+
+                          </li>
+                      </a>
+                      <a href="https://twitter.com/n1ckler" target="_blank" style="text-decoration:none !important;">
+                        <li>
+                            <img src="img/speakers/jonasNick.jpg" width="180" height="180" alt="Jonas Nick"/>
+                            <span class="name">Jonas Nick</span>
+                            <span class="role">blockstram.com</span>
+                        </li>
+                    </a>
                       <a href="https://twitter.com/_jonasschnelli_" target="_blank" style="text-decoration:none !important;">
                         <li>
                             <img src="img/speakers/jonasSchnelli.jpg" width="180" height="180" alt="Jonas Schnelli"/>
@@ -301,6 +316,13 @@
                               <img src="img/speakers/kevinLoaec.jpg" width="180" height="180" alt="Kevin Loaec "/>
                               <span class="name">Kevin Loaec</span>
                               <span class="role">Chainsmiths</span>
+                          </li>
+                      </a>
+                      <a href="https://twitter.com/musalbas" target="_blank" style="text-decoration:none !important;">
+                          <li>
+                              <img src="img/speakers/mustafaAlBassam.jpg" width="180" height="180" alt="Mustafa Al-Bassam"/>
+                              <span class="name">Mustafa Al-Bassam</span>
+                              <span class="role">PhD Student, UCL</span>
                           </li>
                       </a>
                       <a href="https://twitter.com/BTChip" target="_blank" style="text-decoration:none !important;">
@@ -331,6 +353,13 @@
                               <span class="role">UX Designer, Consultant</span>
                           </li>
                       </a>
+                      <a href="https://twitter.com/petertoddbtc" target="_blank" style="text-decoration:none !important;">
+                        <li>
+                            <img src="img/speakers/peterTodd.jpg" width="180" height="180" alt="Peter Todd "/> 
+                            <span class="name">Peter Todd</span> 
+                            <span class="role">Applied Cryptographer</span> 
+                        </li>
+                    </a>
                       <a href="https://twitter.com/rperezmarco" target="_blank" style="text-decoration:none !important;">
                           <li>
                               <img src="img/speakers/ricardoPerezMarco.jpg" width="180" height="180" alt="Ricardo Pérez Marco "/>
