--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-4 col-md-2 offset-md-2">
+                                <div class="col-4 col-md-2 offset-md-1">
                                     <a class="sponsor" href="https://www.f2pool.com/" target="_blank">
                                         <img class="img-fluid" src="img/sponsors/silver/f2pool.png" alt="F2pool">
                                     </a>
@@ -498,16 +498,21 @@
                                         <img class="img-fluid" src="img/sponsors/silver/HODL.png" alt="HODL.capital">
                                     </a>
                                 </div>
-                               <!-- <div class="col-4 col-md-2">
-                                    <a class="sponsor" href="https://www.bcademy.it/" target="_blank">
-                                        <img class="img-fluid" src="img/sponsors/silver/Bcademy.png" alt="BCademy">
+                                <div class="col-md-2">
+                                    <a href="http://chaincode.com/" class="sponsor" target="_blank">
+                                        <img class="img-fluid" src="img/sponsors/silver/chaincode.png" alt="Chaincode">
                                     </a>
-                                </div>-->
+                                </div>
                                 <div class="col-4 col-md-2">
                                     <a class="sponsor" href="#" target="_blank">
                                         <img class="img-fluid" src="img/sponsors/silver/satoshiDesign.png" alt="satoshiDesign">
                                     </a>
                                 </div>
+                               <!-- <div class="col-4 col-md-2">
+                                    <a class="sponsor" href="https://www.bcademy.it/" target="_blank">
+                                        <img class="img-fluid" src="img/sponsors/silver/Bcademy.png" alt="BCademy">
+                                    </a>
+                                </div>-->
                                 <div class="col-4 col-md-2">
                                     <a class="sponsor" href="docs/Bobsponsorship.pdf" type="application/pdf" target="_blank">
                                         <img class="img-fluid" src="img/sponsors/besponsor.png" alt="Sponsorship Proposal">
