--- a/index.html
+++ b/index.html
@@ -508,12 +508,15 @@
                                         <img class="img-fluid" src="img/sponsors/silver/satoshiDesign.png" alt="satoshiDesign">
                                     </a>
                                 </div>
-                                <!--<div class="col-4 col-md-2">
+                                <div class="col-4 col-md-2">
                                     <a class="sponsor" href="https://www.bcademy.it/" target="_blank">
                                         <img class="img-fluid" src="img/sponsors/silver/Bcademy.png" alt="BCademy">
                                     </a>
-                                </div>-->
-                                <div class="col-4 col-md-2">
+                                </div>
+                            </div>
+                            <br>
+                            <div class="row">
+                                <div class="col-4 col-md-2 offset-md-5">
                                     <a class="sponsor" href="docs/Bobsponsorship.pdf" type="application/pdf" target="_blank">
                                         <img class="img-fluid" src="img/sponsors/besponsor.png" alt="Sponsorship Proposal">
                                     </a>
