--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                                         <img class="img-fluid" src="img/sponsors/silver/HODL.png" alt="HODL.capital">
                                     </a>
                                 </div>
-                                <div class="col-md-2">
+                                <div class="col-4 col-md-2">
                                     <a href="http://chaincode.com/" class="sponsor" target="_blank">
                                         <img class="img-fluid" src="img/sponsors/silver/chaincode.png" alt="Chaincode">
                                     </a>
