added sponsor exchangeunion

--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-4 col-md-2 offset-md-4">
+                                <div class="col-4 col-md-2 offset-md-3">
                                     <a class="sponsor" href="https://comproeuro.it/" target="_blank">
                                         <img class="img-fluid" src="img/sponsors/coal/comproEuro.png" alt="Compro Euro">
                                     </a>
@@ -538,6 +538,11 @@
                                 <div class="col-4 col-md-2">
                                     <a class="sponsor" href="https://inbitcoin.it/" target="_blank">
                                         <img class="img-fluid" src="img/sponsors/coal/inBitcoin.png" alt="inBitcoin">
+                                    </a>
+                                </div>
+                                <div class="col-4 col-md-2">
+                                    <a class="sponsor" href="https://www.exchangeunion.com/" target="_blank">
+                                        <img class="img-fluid" src="img/sponsors/coal/exchangeUnion.png" alt="Exchange Union">
                                     </a>
                                 </div>
                             </div>
